# projeto_lora

receptor/: CMakeLists.txt  receptor.c  receptor.h
receptor/lib/: matriz_5X5.h
transmissor/: CMakeLists.txt  transmissor.c  transmissor.h
